tests/negative/_cycle_back.orb
import "tests/negative/test_import_cycle.orb";
